--- a/sections/header_top.liquid
+++ b/sections/header_top.liquid
@@ -18,11 +18,12 @@
           {%- when 'social' -%}
             {%- if block.settings.social == '1' -%}{%- render 'social-sharing',class_tooltip:'ttip_nt tooltip_bottom_right' -%}
             {%- elsif block.settings.social == '2' -%}{% if forloop.last %}{% assign class_tooltip = 'ttip_nt tooltip_bottom_left' %}{% else %}{% assign class_tooltip = 'ttip_nt tooltip_bottom_right' %}{% endif %}{%- render 'social-sharing',follow_social:true,class_tooltip:class_tooltip -%}{%- endif -%}
-          {%- else -%}<div class="header-text">{{block.settings.text}}</div>
+          {%- else -%}<div style="min-height:21px" class="header-text">{{block.settings.text}}</div>
         {%- endcase -%}
       </div>{%- endfor -%}
    </div>
 </div></div>
+
 
   {%- style -%}.h__top {min-height:{{section.settings.height}}px;font-size:{{section.settings.fontsize}}px;}
   {%- if settings.h_transparent and settings.header_design != '7' and settings.h_tr_top and template.name == 'index' -%}
