--- a/snippets/parcelamento.liquid
+++ b/snippets/parcelamento.liquid
@@ -284,7 +284,7 @@
   <div style="margin: 0px; display: block;  border-top: 1px solid #dadada; padding: 5px;">
     <div class="row" stylew="margin: 0">
       <div style="padding:0; width: 75%; text-align: left; text-decoration: none;">
-        <img class="cartoes boleto" src="https://cdn.shopify.com/s/assets/payment_icons/boleto-50666ca3aee193c64e41a2803fe4a6d6c5e1a27d03c5e44ce97e3aa82fb6deb2.svg">
+        <!-- <img class="cartoes boleto" src="https://cdn.shopify.com/s/assets/payment_icons/boleto-50666ca3aee193c64e41a2803fe4a6d6c5e1a27d03c5e44ce97e3aa82fb6deb2.svg"> -->
         <img class="cartoes pix" src="//cdn.shopify.com/shopifycloud/shopify/assets/payment_icons/pix-8aaec3ba7de27788eeca20f0c2329994ff27f055bd6219dea1a0138f95cad517.svg">
       </div>
       <div style="padding:0; width: 25%; text-align: right; padding-top: 3px;">
