--- a/snippets/head_assets.liquid
+++ b/snippets/head_assets.liquid
@@ -41,10 +41,8 @@
   .fade_flick_1.slideshow {
     min-width: 100%!important
   }
-   @media screen and (min-width:1600px) and (max-width:1920px){ 
-    .fade_flick_1.slideshow, .bg_rp_norepeat, .slideshow__slide.is-selected{
-    height: 500px!important; 
-  }
+  .fade_flick_1.slideshow, .bg_rp_norepeat, .slideshow__slide.is-selected{
+    height: auto!important; 
   }
   @media screen and (min-width:1280px) and (max-width:1600px){ 
     .fade_flick_1.slideshow, .bg_rp_norepeat, .slideshow__slide.is-selected{
@@ -65,6 +63,11 @@
     .fade_flick_1.slideshow, .bg_rp_norepeat, .slideshow__slide.is-selected{
     height: 400px!important; 
   }
+  }
+  @media screen and (max-width:1200px) {
+    body{
+      overflow: auto
+    }
   }
   </style>
 
