--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -83,7 +83,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body></html>
 
 <script>
-if(window.innerWidth < 1200) {
+if(window.innerWidth > 1200) {
   window.addEventListener("mousemove", () => {
     const body = document.querySelector("body")
     const iconCart = document.querySelector(".icon_cart .tcount")
